--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -33,3 +33,4 @@ jobs:
           prerelease: true
           generate_release_notes: true
           tag_name: bleeding-edge
+          token: ${{ secrets.GITHUB_TOKEN }}
