--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -20,11 +20,17 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies & Build
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install build
+          pip install pylint
+
+      - name: Run pylint & build
+        run: |
+          pylint src
           python -m build
+
 
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
